loading icon done

--- a/client/index.less
+++ b/client/index.less
@@ -10,6 +10,17 @@ h2 {
   color: #FF424C;
   text-shadow: 5px 5px 20px black;
 }
+.header-contain{
+  width:100%;
+  height: 230px;
+}
+img{
+  margin-left: 50%;
+  z-index: 1;
+}
+svg{
+  z-index: 0;
+}
 
 // h3{
 //   margin-top: 500px;
@@ -47,11 +58,21 @@ h2 {
   font-size: 10px;
 }
 
+/*width: 100%;*/
+@media screen and (max-width: 117px){
+  .btn-success{
+    background-color: yellow !important;
+  }
+}
+
 #toggle_showshooshi {
-  margin: 5px;
-  margin-left: 35%;
+  margin-top: 5px;
+  // margin: 5px;
+  // margin-left: 50%;
+  width: 100%;
   font-family: 'Lato', sans-serif;
-  /*width: 100%;*/
+  font-size: 100%;
+
 }
 
 .hue-color-wheel {
