--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,17 @@ h2 {
   color: #FF424C;
   text-shadow: 5px 5px 20px black;
 }
+.header-contain {
+  width: 100%;
+  height: 230px;
+}
+img {
+  margin-left: 50%;
+  z-index: 1;
+}
+svg {
+  z-index: 0;
+}
 #map {
   height: 300px;
   border-radius: 25px;
@@ -36,11 +47,17 @@ h2 {
   font-family: 'Cinzel', serif;
   font-size: 10px;
 }
+/*width: 100%;*/
+@media screen and (max-width: 117px) {
+  .btn-success {
+    background-color: yellow !important;
+  }
+}
 #toggle_showshooshi {
-  margin: 5px;
-  margin-left: 35%;
+  margin-top: 5px;
+  width: 100%;
   font-family: 'Lato', sans-serif;
-  /*width: 100%;*/
+  font-size: 100%;
 }
 .hue-color-wheel {
   color: #f35626;
