--- a/client/index.less
+++ b/client/index.less
@@ -21,10 +21,38 @@ img{
 svg{
   z-index: 0;
 }
+.input_userSearch{
+  margin: 5px;
+}
 
-// h3{
-//   margin-top: 500px;
-// }
+#toggle_userSearch{
+  margin:5px;
+}
+
+.changeOfHeart-contain{
+  width: 100%;
+  height: 45px;
+}
+
+#myModalLabel{
+  color: black;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+}
+
+.mexican{
+  background-color: #5BB75B;
+  height: 70%;
+  margin-left: 10%;
+  margin-top: 1%;
+}
+
+.itilian{
+  background-color: #5BB75B;
+  height: 70%;
+  margin-left: 10%;
+  margin-top: 1%;
+}
 
 #map {
   height: 300px;
@@ -93,6 +121,7 @@ svg{
   }
 }
 
+//-----HOVER---EFFECTS-------//
 .grow {
   display: inline-block;
   -webkit-transition-duration: 0.3s;
@@ -137,12 +166,97 @@ svg{
   opacity: 1;
 }
 
+@-webkit-keyframes wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
+@keyframes wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
+.wobble-horizontal {
+  display: inline-block;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.wobble-horizontal:hover, .wobble-horizontal:focus, .wobble-horizontal:active {
+  -webkit-animation-name: wobble-horizontal;
+  animation-name: wobble-horizontal;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
+//----==HOVER--END==----//
+
+
 .input_container{
   /* Safari 5.1+, Chrome 10+ */
   background: -webkit-radial-gradient(circle, #FF424C, #060602);
   height: 85px;
   width: 100%;
 }
+
 
 .footerButton {
   display: inline-block;
