--- a/public/index.css
+++ b/public/index.css
@@ -20,6 +20,33 @@ img {
 svg {
   z-index: 0;
 }
+.input_userSearch {
+  margin: 5px;
+}
+#toggle_userSearch {
+  margin: 5px;
+}
+.changeOfHeart-contain {
+  width: 100%;
+  height: 45px;
+}
+#myModalLabel {
+  color: black;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+}
+.mexican {
+  background-color: #5BB75B;
+  height: 70%;
+  margin-left: 10%;
+  margin-top: 1%;
+}
+.itilian {
+  background-color: #5BB75B;
+  height: 70%;
+  margin-left: 10%;
+  margin-top: 1%;
+}
 #map {
   height: 300px;
   border-radius: 25px;
@@ -120,6 +147,76 @@ svg {
   bottom: -2px;
   left: -2px;
   opacity: 1;
+}
+@-webkit-keyframes wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+  33.3% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+.wobble-horizontal {
+  display: inline-block;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.wobble-horizontal:hover,
+.wobble-horizontal:focus,
+.wobble-horizontal:active {
+  -webkit-animation-name: wobble-horizontal;
+  animation-name: wobble-horizontal;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 .input_container {
   /* Safari 5.1+, Chrome 10+ */
