new animaitons and css colors

--- a/client/index.jade
+++ b/client/index.jade
@@ -65,9 +65,9 @@ html(ng-app='mean-template', lang='en')
         //-       input.animated.fadeInLeft.form-control.input_userSearch#name1(type='text', name='name1', autofocus=true, placeholder='Enter A City Here!')
         //-       button#toggle_userSearch.btn.btn-success.animated.fadeInRight(type='submit', data-hover="Hello") Search it
         //-   .col-xs4
-        .changeOfHeart-contain    
-          button.mexican.btn-success.btn.wobble-horizontal(type='button', data-toggle='modal', data-target='.bs-example-modal-sm', ng-click='toggleMexican()') Mexican
-          button.itilian.btn-success.btn.wobble-horizontal(type='button', data-toggle='modal', data-target='.bs-example-modal-sm1', ng-click='toggleMexican()') Italian
+        .changeOfHeart-contain.animated.flipInX    
+          button.mexican.btn-danger.btn.wobble-horizontal(type='button', data-toggle='modal', data-target='.bs-example-modal-sm', ng-click='toggleMexican()') Mexican
+          button.italian.btn-danger.btn.wobble-horizontal(type='button', data-toggle='modal', data-target='.bs-example-modal-sm1', ng-click='toggleMexican()') Italian
           
           //- MODALS
         .modal.fade.bs-example-modal-sm1(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
