--- a/client/index.less
+++ b/client/index.less
@@ -12,12 +12,19 @@ h2 {
 }
 .header-contain{
   width:100%;
-  height: 230px;
+  height: 245px;
 }
-img{
-  margin-left: 50%;
-  z-index: 1;
+
+.Sushi{
+ margin-left: 25%;
+ margin-top: -18%;
 }
+
+// img{
+//   margin-left: 50%;
+//   z-index: 1;
+//
+// }
 svg{
   z-index: 0;
 }
