--- a/public/index.css
+++ b/public/index.css
@@ -11,11 +11,11 @@ h2 {
 }
 .header-contain {
   width: 100%;
-  height: 230px;
+  height: 245px;
 }
-img {
-  margin-left: 50%;
-  z-index: 1;
+.Sushi {
+  margin-left: 25%;
+  margin-top: -18%;
 }
 svg {
   z-index: 0;
