change modal CSS

--- a/client/index.jade
+++ b/client/index.jade
@@ -70,6 +70,7 @@ html(ng-app='mean-template', lang='en')
           button.italian.btn-danger.btn.wobble-horizontal(type='button', data-toggle='modal', data-target='.bs-example-modal-sm1', ng-click='toggleMexican()') Italian
           
           //- MODALS
+          //Mexican
         .modal.fade.bs-example-modal-sm1(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
           .modal-dialog.modal-sm
             .modal-content
@@ -94,7 +95,7 @@ html(ng-app='mean-template', lang='en')
                 .col-xs-4
                   button#toggle_userSearchItalian.btn.btn-success.animated.fadeInRight(type='submit', data-hover="Hello") Search it
                 .col-xs-4
-          
+          //Italian
         .modal.fade.bs-example-modal-sm(tabindex='-1', role='dialog', aria-labelledby='mySmallModalLabel', aria-hidden='true')
           .modal-dialog.modal-sm
             .modal-content
@@ -153,7 +154,7 @@ html(ng-app='mean-template', lang='en')
         nav.cl-effect-11
           a.footerButton.wp4(href='https://github.com/MikeBBarreiro', data-hover='GitHub' style='-webit-animation-delay: 0.5s;') Github
           a.footerButton.wp4(href='https://www.linkedin.com/profile/view?id=221590218&trk=nav_responsive_tab_profile_pic', data-hover='LinkedIn' style='-webkit-animation-delay: 0.35s;') LinkedIn
-          a.footerButton.wp4(href='https://twitter.com/l8MikeBl8', data-hover='Twitter' style='-webkit-animation-delay: 0.15s;') Twitter
+          a.footerButton.wp4(href='https://mikebbarreiro.github.io', data-hover='Portfolio' style='-webkit-animation-delay: 0.15s;') Portfolio
     
             
     h3 {{occupation}}
