--- a/client/index.less
+++ b/client/index.less
@@ -36,7 +36,7 @@ svg{
   margin:5px;
 }
 
-
+//---------------Modals----------------//
 #myModalLabel{
   color: black;
   text-align: center;
@@ -46,6 +46,11 @@ svg{
 .modal-header{
   background-color: #F43E48 !important;
 }
+
+.modal-content{
+  background-color: RGBA(75, 110, 239, 0.0) !important;
+}
+//---------------END-Modals---------------//
 
 .changeOfHeart-contain{
   width: 100%;
