--- a/client/index.less
+++ b/client/index.less
@@ -10,6 +10,8 @@ h2 {
   color: #FF424C;
   text-shadow: 5px 5px 20px black;
 }
+
+
 .header-contain{
   width:100%;
   height: 245px;
@@ -18,6 +20,11 @@ h2 {
 .Sushi{
  margin-left: 25%;
  margin-top: -18%;
+}
+
+.leaves{
+  width: 100%;
+  height: 100%;
 }
 
 // img{
@@ -70,6 +77,14 @@ svg{
 }
 
 .italian{
+  border: 1px solid black !important;
+  background-color: #4B6EEF;
+  height: 70%;
+  margin-left: 5%;
+  margin-top: 1%;
+}
+
+.chinese{
   border: 1px solid black !important;
   background-color: #4B6EEF;
   height: 70%;
