--- a/public/index.css
+++ b/public/index.css
@@ -17,6 +17,10 @@ h2 {
   margin-left: 25%;
   margin-top: -18%;
 }
+.leaves {
+  width: 100%;
+  height: 100%;
+}
 svg {
   z-index: 0;
 }
@@ -51,6 +55,13 @@ svg {
   margin-top: 1%;
 }
 .italian {
+  border: 1px solid black !important;
+  background-color: #4B6EEF;
+  height: 70%;
+  margin-left: 5%;
+  margin-top: 1%;
+}
+.chinese {
   border: 1px solid black !important;
   background-color: #4B6EEF;
   height: 70%;
