--- a/client/index.jade
+++ b/client/index.jade
@@ -4,7 +4,8 @@ html(ng-app='mean-template', lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title MEAN Template
+    link(rel="shortcut icon" href="/favicon.ico")
+    title ShowShooshi
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/assets/css/animate.css', rel='stylesheet')
