--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300);
+@import url(//fonts.googleapis.com/css?family=Lato:300);
 body {
   background-color: #ffdc00;
   color: #fff;
@@ -45,7 +45,7 @@ svg {
 .changeOfHeart-contain {
   width: 100%;
   height: 45px;
-  -webkit-animation-delay: 4s;
+  -webkit-animation-delay: 4.5s;
 }
 .mexican {
   border: 1px solid black !important;
