--- a/client/index.less
+++ b/client/index.less
@@ -1,6 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Lato:300);
 body{
-  background-color: #ffdc00;
+  background-color: #1A1A1A;
   color: #fff;
   background: -webkit-linear-gradient(top, #333333, #060606);
 }
