--- a/client/index.jade
+++ b/client/index.jade
@@ -32,10 +32,15 @@ html(ng-app='mean-template', lang='en')
     //-   .modal-dialog.modal-sm
     //-     .modal-content 
     //-       button.btn Yoyoyoy
-          
+        
     #ip-container.ip-container
       // initial header
       .header-contain
+        //- p V2.0
+        <div id="awan">
+        
+        
+        </div>
         //- img.leaves(src='/assets/img/leaves.png')
         //- img.Sushi.ip-inner(src='/assets/img/showshooshi.png')
       
