minor margin change

--- a/client/index.jade
+++ b/client/index.jade
@@ -4,8 +4,8 @@ html(ng-app='mean-template', lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='author' content='Michael Barreiro')
-    meta(name='keywords' content='Sushi, Mexican, Chinese, Italian, restaurants, food, yumm')
+    meta(name='author', content='Michael Barreiro')
+    meta(name='keywords', content='Sushi, Mexican, Chinese, Italian, restaurants, food, yumm')
     meta(name='description', content='Showshooshi searches sushi restaraunts in the city the user desires to search. But now, v2.0 lets you search other food types with the option to see, traffic and weather layers.')
     link(rel="shortcut icon" href="/favicon.ico")
     title ShowShooshi
