--- a/client/index.less
+++ b/client/index.less
@@ -297,6 +297,7 @@ svg{
   background: -webkit-radial-gradient(circle, #FF424C, #060602);
   height: 85px;
   width: 100%;
+  margin-top: -40px;
 }
 
 
