--- a/public/index.css
+++ b/public/index.css
@@ -245,6 +245,7 @@ svg {
   background: -webkit-radial-gradient(circle, #ff424c, #060602);
   height: 85px;
   width: 100%;
+  margin-top: -40px;
 }
 .footerButton {
   display: inline-block;
