--- a/client/index.less
+++ b/client/index.less
@@ -2,7 +2,20 @@
 body{
   background-color: #1A1A1A;
   color: #fff;
+  /* fallback */
+  background: url('assets/img/black.jpg');
+  background-size: cover;
+  background-repeat: repeat-x;
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from( #333333), to(#060606));
+  /* Safari 5.1, Chrome 10+ */
   background: -webkit-linear-gradient(top, #333333, #060606);
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(top, #333333, #060606);
+  /* IE 10 */
+  background: -ms-linear-gradient(top, #333333, #060606);
+  /* Opera 11.10+ */
+  background: -o-linear-gradient(top, #333333, #060606);
 }
 
 h2 {
@@ -298,6 +311,16 @@ svg{
   height: 85px;
   width: 100%;
   margin-top: -40px;
+  /* fallback */ background-color: #F73B42;
+  /* Safari 4-5, Chrome 1-9 */ /*no specification of percentage size. */
+  background: -webkit-gradient(radial, center center, 0, center center, 460, from(#FF424C), to(#060602));
+  /* Safari 5.1+, Chrome 10+ */
+  background: -webkit-radial-gradient(circle, #FF424C, #060602);
+  /* Firefox 3.6+ */
+  background: -moz-radial-gradient(circle, #FF424C, #060602);
+  /* IE 10 */
+   background: -ms-radial-gradient(circle, #FF424C, #060602);
+   /* Opera couldn't do radial gradients, then at some point they started supporting the -webkit- syntax, how it kinda does but it's kinda broken (doesn't do sizing) */
 }
 
 
